syntax = "proto3";

package vmapi;

option go_package = "github.com/benschlueter/delegatio/core/vmapi/vmproto";


service API {
  rpc ExecCommand(ExecCommandRequest) returns (stream ExecCommandResponse);
}

message ExecCommandRequest {
  string command = 1;
  repeated string args = 2;
}

message ExecCommandResponse {
  oneof content {
    bytes output = 1;
    Log log = 2;
  }
}

message Log {
  string message = 1;
}